sass/_layout.scss
.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px 0;
  transition: all 0.3s ease;
  background-color: $color-secondary;
}

.hamburger {
  padding: 8px;
  justify-content: flex-start;
  cursor: pointer;

  &.active .bar:nth-child(2) {
    opacity: 0;
  }

  &.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  &.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }
}

.logo img {
  display: none;
  width: 150px;
  height: 150px;
}

ul {
  list-style: none;
}

.menu {
  display: none;

  &.active {
    display: flex;
    background-image: url(../images/bg-3.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    top: 0;
    gap: 15px;
    flex-direction: column;
    align-items: center;
    opacity: 0.8;
    width: 100%;
    height: 100vh;
    text-align: center;
    transition: 0.3s;
    padding-top: 100px;
    z-index: 1;
  }
}

.contact {
  text-align: center;
  margin-top: 30px;

  & a {
    color: $color-secondary;
    cursor: pointer;
    font-weight: bold;
    text-decoration: none;
  }
}

.nav-link a {
  text-decoration: none;
  color: $color-secondary;
  font-weight: 700;
  transition: 0.3s;
  font-size: 1.1rem;

  &:hover {
    color: $color-primary;
  }
}

li:nth-child(6) {
  border-width: 3px;
  border-style: solid;
  border-image: linear-gradient(to right, #ec5242, #272a31) 1;
  padding: 7px;
}

section.hero {
  display: flex;
  flex-direction: column;
  padding: 40px 30px;
  height: 100vh;
  margin-top: 60px;
}

.hero-text {
  font-family: "Lato", sans-serif;
  font-size: 1.3rem;
  font-weight: 700;
  color: $color-primary;
}

.hero-header {
  font-family: inherit;
  font-size: 2.5rem;
  font-weight: bolder;
  color: $color-primary;
  text-transform: uppercase;
  margin-bottom: 30px;
}

.text {
  background-image: url(../images/text-bg-1.jpg);
  background-repeat: repeat;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.description {
  font-size: 1rem;
  font-family: inherit;
  padding: 15px;
  margin-top: 10px;
  line-height: 150%;
  opacity: 0.7;
}

.header-h2 {
  font-family: inherit;
  text-transform: uppercase;
  font-weight: bolder;
}

.main-program {
  background-image: url(../images/program-bg.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  padding: 2rem;
}

.program-heading {
  color: $color-white;
  font-size: 1.8rem;
  text-align: center;
  padding-top: 30px;
  position: relative;
  margin-bottom: 3rem;
}

.program-heading::after {
  content: "";
  height: 3px;
  width: 20%;
  background: linear-gradient(to right, #d3d3d3, #f24432);
  position: absolute;
  margin: auto;
  bottom: -5px;
  left: 0;
  right: 0;
}

.card-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 1rem;
  justify-content: center;
  align-items: center;
}

.card {
  background-color: #b3b3b351;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 0.5rem;
  width: 100%;
  padding: 0.5rem;

  &:hover {
    border: 1px solid $color-primary;
  }
}

.card-header {
  color: $color-primary;
  font-weight: 700;
  font-family: inherit;
  font-size: 1.1rem;
}

.card-text {
  color: $color-white;
  font-weight: 700;
  font-family: inherit;
}

// Team style

.team {
  padding: 3rem 4rem;
}

.program-heading.group {
  color: $color-secondary;
}

.team-container {
  display: grid;
  grid-template-columns: 1fr;
  gap: 15px;
}

.frame img {
  width: 10rem;
  height: 11rem;
  object-fit: cover;
}

.individual {
  display: flex;
  gap: 15px;
}

.team-details {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.name {
  color: $color-secondary;
  font-weight: 700;
  font-size: 1.5rem;
}

.role {
  font-style: italic;
  color: $color-primary;
}

.line {
  width: 2.5rem;
  height: 0.1rem;
  background-color: #a2a8b5;
  margin: 0.5rem 0;
}

.partners {
  background: $color-secondary;
  padding: 5rem 0;
  margin-top: 5rem;
}

.partners-header {
  font-size: 1.8rem;
  color: $color-white;
  text-align: center;
  position: relative;

  &::after {
    content: "";
    height: 3px;
    width: 15%;
    background: linear-gradient(to right, #d3d3d3, #f24432);
    position: absolute;
    margin: auto;
    bottom: -5px;
    left: 0;
    right: 0;
  }
}

.partner-list {
  margin-top: 30px;
  display: flex;
  gap: 15px;
  align-items: center;
  justify-content: center;
}

.partner-img {
  width: 80px;
  height: 25px;
}

// About page styles

.hero-about {
  background-image: url(../images/bg-3.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-color: #d3d3d3;
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  gap: 20px;
  align-items: center;
  padding: 3rem 4rem;
  font-family: "Lato", sans-serif;
}

.about-text {
  text-align: center;
  font-size: 1.5rem;
  color: $color-primary;
  font-weight: bold;
  margin-top: 50px;
}

.detail {
  text-align: center;
  background-color: $color-white;
  padding: 1rem 2rem;
}

.about-detail {
  text-align: center;
  font-size: 2.5rem;
  color: $color-primary;
  font-weight: bold;
}

.about-logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 5rem;
  gap: 25px;
  padding: 3rem 4rem;
}

.logo-head {
  position: relative;
  font-size: 1.2rem;
  margin-top: 30px;

  &::after {
    content: "";
    height: 3px;
    width: 15%;
    background: linear-gradient(to right, #d3d3d3, #f24432);
    position: absolute;
    margin: auto;
    bottom: -5px;
    left: 0;
    right: 0;
  }
}

.logo-detail {
  text-align: center;
}

.logo-design {
  border: 1px solid $color-light-grey;
  width: 200px;
  height: auto;
}

.workshop {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  gap: 20px;
  margin-top: 2rem;
}

.workshop-1 {
  background:
    linear-gradient(rgba(236, 82, 66, 0.7), rgba(39, 42, 49, 0.6)),
    url(../images/workshop-1.png) no-repeat center;
  background-size: cover;
  height: 10rem;
  width: 100%;
  text-align: center;
  color: $color-white;
  display: flex;
  justify-content: center;
  align-items: center;

  &:hover {
    background:
      linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)),
      url(../images/workshop-1.png) no-repeat center;
  }
}

.workshop-2 {
  background:
    linear-gradient(rgba(236, 82, 66, 0.7), rgba(39, 42, 49, 0.6)),
    url(../images/workshop-2.png) no-repeat center;
  background-size: cover;
  height: 10rem;
  width: 100%;
  text-align: center;
  color: $color-white;
  display: flex;
  justify-content: center;
  align-items: center;

  &:hover {
    background:
      linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)),
      url(../images/workshop-2.png) no-repeat center;
  }
}

.footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: $color-secondary;
  padding: 10px;

  & img {
    width: 45%;
    height: auto;
  }
}

@media (min-width: 48rem) {
  body {
    background-image: url(../images/bg-3.jpg);
  }

  .nav-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    position: fixed;
    top: 0;
    background-color: $color-white;
    width: 100%;
    height: 70px;
  }

  .menu {
    display: flex;
    background: none;
    gap: 20px;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    opacity: 0.8;
    width: 100%;
    height: 80px;
    text-align: center;
    transition: 0.3s;
    padding-top: 10px;
  }

  .logo img {
    display: block;
  }

  .hamburger {
    display: none;
  }

  section.hero {
    padding: 40px 100px 20px 100px;
  }

  .hero-text {
    font-size: 1.7rem;
  }

  .hero-header {
    font-size: 3.5rem;
    line-height: 1.2;
  }

  .description {
    padding-right: 200px;
  }

  .header-h2 {
    margin-top: 10px;
    opacity: 0.8;
  }

  .main-program {
    padding: 3rem 15rem;
  }

  .program-heading::after {
    width: 8%;
  }

  .card-container {
    flex-direction: row;
    gap: 1.5rem;
  }

  .card {
    flex-direction: column;
    gap: 0.5rem;
    padding: 1.3rem;
  }

  .card-text {
    text-align: center;
  }

  .team {
    padding: 2rem 5rem;
  }

  .team-container {
    grid-template-columns: 1fr 1fr;
  }

  .partners {
    padding: 50px 0 100px 0;
  }

  .partners-header::after {
    width: 6%;
  }

  .partner-list {
    margin-top: 40px;
  }

  .partner-img {
    width: 100px;
    height: 35px;
    margin-top: 100px;
  }

  .hero-about {
    justify-content: center;
  }

  .detail {
    width: 60%;
    text-align: justify;
  }

  .workshop {
    flex-direction: row;
  }

  .footer {
    display: flex;
    justify-content: center;
    align-items: center;
    color: $color-secondary;
    padding: 10px;
  }

  .footer img {
    width: 18%;
    height: auto;
  }
}

